# red-nox

./: .gitignore  README.md  noxfile.py  pyproject.toml  ruff.toml
requirements/: requirements.dev.txt
src/red_nox/: __init__.py  sessions.py  vars.py
src/red_nox/sessions/: __init__.py
src/red_nox/sessions/code_check/: __init__.py  __sessions.py
src/red_nox/sessions/debug/: __init__.py  __sessions.py
src/red_nox/sessions/git/: __init__.py  __sessions.py
src/red_nox/sessions/pre_commit/: __init__.py  __sessions.py
src/red_nox/utils/: __init__.py  __logging.py  __methods.py  __paths.py
